--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 spring.application.name=EmailMicroservices
 
 server.port=8080
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=
+spring.mail.password=
+
+spring.mail.propeties.smtp.auth=true
+spring.mail.propeties.smtp.starttls.enable=true
