--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,12 @@ spring.mail.password=
 
 spring.mail.propeties.smtp.auth=true
 spring.mail.propeties.smtp.starttls.enable=true
+
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
+
+spring.datasource.url=jdbc:mysql://localhost:3306/emails
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
