--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,16 @@
 	<build>
 		<plugins>
 			<plugin>
+    			<groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-surefire-plugin</artifactId>
+    			<version>3.0.0</version>
+    			<configuration>
+        			<includes>
+			            <include>**/*Tests.java</include>
+			        </includes>
+    			</configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.11.0</version>
