--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -6,6 +6,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Copia os arquivos do repo
+        uses: actions/checkout@v3
+
       - name: Build app
         run: mvn clean install
 
