--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -9,6 +9,9 @@ jobs:
       - name: Copia os arquivos do repo
         uses: actions/checkout@v3
 
+      - name: Sobe o docker
+        uses: docker-compose up -d
+
       - name: Build app
         run: mvn clean install
 
