--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -6,11 +6,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Copia os arquivos do repo
-        uses: actions/checkout@v3
-
+      - uses: actions/checkout@v3
+      
       - name: Sobe o docker
-        uses: docker-compose up -d
+        run: docker-compose up -d
 
       - name: Build app
         run: mvn clean install
