--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,9 +7,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      
+
       - name: Sobe o docker
-        run: docker-compose up -d
+        run: docker compose up -d
 
       - name: Build app
         run: mvn clean install
